Kyverno-policy-engine-admission-controllers/privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-test
spec:
  containers:
    - name: test
      image: nginx
      securityContext:
        privileged: true
      resources:
        requests:
          cpu: "20m"
          memory: "64Mi"
        limits:
          cpu: "30m"
          memory: "70Mi"
      volumeMounts:
      - name: host
        mountPath: /host
  volumes:
    - name: host
      hostPath:
        path: /
