Kyverno-policy-engine-admission-controllers/require-cpu-memory.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: resource-policy
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-resources
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "CPU and memory requests/limits are required"
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"
                  limits:
                    cpu: "?*"
                    memory: "?*"
